; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/ifconfig/extr_ifvlan.c_vlan_status.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/ifconfig/extr_ifvlan.c_vlan_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.vlanreq = type { i32, i8* }

@ifr = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@.str = private unnamed_addr constant [10 x i8] c"\09vlan: %d\00", align 1
@SIOCGVLANPCP = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [13 x i8] c" vlanpcp: %u\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c" parent interface: %s\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"<none>\00", align 1
@.str.4 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @vlan_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vlan_status(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vlanreq, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @getvlan(i32 %4, %struct.TYPE_3__* @ifr, %struct.vlanreq* %3)
  %6 = icmp eq i32 %5, -1
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %34

8:                                                ; preds = %1
  %9 = getelementptr inbounds %struct.vlanreq, %struct.vlanreq* %3, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load i32, i32* %2, align 4
  %13 = load i32, i32* @SIOCGVLANPCP, align 4
  %14 = call i32 @ioctl(i32 %12, i32 %13, i32 ptrtoint (%struct.TYPE_3__* @ifr to i32))
  %15 = icmp ne i32 %14, -1
  br i1 %15, label %16, label %19

16:                                               ; preds = %8
  %17 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ifr, i32 0, i32 0), align 4
  %18 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32 %17)
  br label %19

19:                                               ; preds = %16, %8
  %20 = getelementptr inbounds %struct.vlanreq, %struct.vlanreq* %3, i32 0, i32 1
  %21 = load i8*, i8** %20, align 8
  %22 = getelementptr inbounds i8, i8* %21, i64 0
  %23 = load i8, i8* %22, align 1
  %24 = sext i8 %23 to i32
  %25 = icmp eq i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %19
  br label %30

27:                                               ; preds = %19
  %28 = getelementptr inbounds %struct.vlanreq, %struct.vlanreq* %3, i32 0, i32 1
  %29 = load i8*, i8** %28, align 8
  br label %30

30:                                               ; preds = %27, %26
  %31 = phi i8* [ getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), %26 ], [ %29, %27 ]
  %32 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0), i8* %31)
  %33 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.4, i64 0, i64 0))
  br label %34

34:                                               ; preds = %30, %7
  ret void
}

declare dso_local i32 @getvlan(i32, %struct.TYPE_3__*, %struct.vlanreq*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @ioctl(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
